--- a/app/src/main/res/menu/puzzle.xml
+++ b/app/src/main/res/menu/puzzle.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".PuzzleActivity" >
     <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+        android:title="hardcode"
         android:orderInCategory="100"
         android:showAsAction="never" />
 </menu>
