--- a/app/src/main/res/layout/fragment_puzzle.xml
+++ b/app/src/main/res/layout/fragment_puzzle.xml
@@ -11,11 +11,11 @@
         android:layout_gravity="center"
         android:text="@string/hello_blank_fragment" />
 
-    <GridView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/puzzleGridRecyclerView"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </GridView>
+        android:layout_height="match_parent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,6 +27,7 @@
             android:layout_height="wrap_content" />
 
         <Button
+            android:id="@+id/nextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
