--- a/app/src/main/res/layout/fragment_puzzle.xml
+++ b/app/src/main/res/layout/fragment_puzzle.xml
@@ -12,7 +12,7 @@
         android:text="@string/hello_blank_fragment" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/puzzleGridRecyclerView"
+        android:id="@+id/puzzle_grid_recyclerView"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/nextButton"
+            android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
