--- a/app/src/main/res/layout/fragment_puzzle.xml
+++ b/app/src/main/res/layout/fragment_puzzle.xml
@@ -15,7 +15,7 @@
         android:id="@+id/puzzle_grid_recyclerView"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"/> <!-- Scrollbars necessary? -->
 
     <LinearLayout
         android:layout_width="match_parent"
